# The-Gauss-Seidel-OpenMP-test

./: CMakeLists.txt  REPORT.md  main.cpp
